@@ -55,7 +55,6 @@ class DeprecatedHooks {
 		'RollbackComplete' => [ 'deprecatedVersion' => '1.36', 'silent' => true ],
 		'SecondaryDataUpdates' => [ 'deprecatedVersion' => '1.32', 'silent' => true ],
 		'SpecialMuteSubmit' => [ 'deprecatedVersion' => '1.35', 'silent' => true ],
-		'SkinTemplateBuildNavUrlsNav_urlsAfterPermalink' => [ 'deprecatedVersion' => '1.35' ],
 		'SkinTemplateOutputPageBeforeExec' => [ 'deprecatedVersion' => '1.35' ],
 		'SkinTemplateToolboxEnd' => [ 'deprecatedVersion' => '1.35' ],
 		'UserLoadFromDatabase' => [ 'deprecatedVersion' => '1.37' ],
