@@ -285,6 +285,8 @@ because of Phabricator reports.
 * The SkinTemplatePreventOtherActiveTabs hook, deprecated in 1.35, was removed
   entirely.
 * The SkinTemplateTabAction hook, deprecated in 1.35, was removed entirely.
+* The SkinTemplateBuildNavUrlsNav_urlsAfterPermalink hook, deprecated in 1.35,
+  was removed entirely.
 * …
 
 === Deprecations in 1.37 ===
